--- a/app/partials/views/contact.html
+++ b/app/partials/views/contact.html
@@ -1,7 +1,9 @@
-<h1>Get in Touch</h1>
-<ul>
-	<li><strong>Email:</strong>josh@jsink.co</li>
-	<li><strong>Phone:</strong>843.408.6280</li>
-	<li><strong>LinkedIn:</strong><a href="http://www.linkedin.com/in/joshuajourdain/">My Profile</a></li>
-	<li><strong>Twitter:</strong><a href="https://twitter.com/jajourda">@jajourda</a></li>
-</ul>
+<div class="contact-wrap">
+	<h1>Get in Touch</h1>
+	<ul>
+		<li><strong>Email:</strong>josh@jsink.co</li>
+		<li><strong>Phone:</strong>843.408.6280</li>
+		<li><strong>LinkedIn:</strong><a href="http://www.linkedin.com/in/joshuajourdain/">My Profile</a></li>
+		<li><strong>Twitter:</strong><a href="https://twitter.com/jajourda">@jajourda</a></li>
+	</ul>
+</div>
