added devcv partial to explain some of the technologies employed; added myjet screenshots, myjet to webdata json file; added styling to web projects and project highlights; fixed some styling issues

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,4 +1,4 @@
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center cv-jumbotron">
     <ul class="icon-nav text-center" ng-show="cvSubShowing">
        <li ng-repeat="awesomeThing in awesomeThings | orderBy:'rank'">
          <a ng-href="#{{awesomeThing.url | routeSegmentUrl}}"><span ng-class="awesomeThing.icon"></span></a>
